Update styles for sliders to fix alignment and extra spacing

--- a/app/styles/components/_ui-slider.scss
+++ b/app/styles/components/_ui-slider.scss
@@ -11,21 +11,24 @@
 		$last-column: false
 	);
 
-	margin-top: rem-calc(8);
+	margin-top: .75rem;
 }
 
 .container-slider {
 	@include grid-column(
 		// $center: true,
-		$collapse: true,
+		// $collapse: true,
 		$columns: 8
 	);
 
-	padding: 1rem 0;
+	padding-bottom: 1rem;
+	padding-top: 1rem;
 
 	.slider-value {
+		cursor: default;
 		font-size: 1.5rem;
 		position: absolute;
-		z-index: 2;
+		user-select: none;
+		z-index: 5;
 	}
 }
